# conway

./: .gitignore  CMakeLists.txt  readme.md
src/: conway.cpp  conway.h  main.cpp
